--- a/Pacreport/pacreport.conf
+++ b/Pacreport/pacreport.conf
@@ -1,24 +1,93 @@
 [Options]
-IgnoreUnowned = efi/
+IgnoreUnowned = efi
+IgnoreUnowned = swap
 
 [PkgIgnoreUnowned]
+bluez = var/lib/bluetooth/*
+ca-certificates = etc/ca-certificates/extracted/*
+cups = etc/cups/*
+cups = etc/printcap
+cups = var/spool/cups/*
+dbus = var/lib/dbus
+dbus = var/lib/dbus/
+desktop-file-utils = usr/share/applications/mimeinfo.cache
+firefox = etc/firefox
+firefox = usr/lib/firefox/defaults/pref/*
+firewalld = etc/firewalld/zones/*
+fontconfig = etc/fonts/conf.d/*
+gdk-pixbuf2 = usr/lib/gdk-pixbuf-2.0/2.*/loaders.cache
+geoclue = var/lib/geoclue
+glib2 = usr/lib/gio/modules/giomodule.cache
+glib2 = usr/share/glib-2.0/schemas/gschemas.compiled
+glibc = etc/ld.so.cache
+gtk3 = usr/lib/gtk-3.0/3.*/immodules.cache
+gtk3 = usr/lib/gtk-4.0/4.*/*/giomodule.cache
+gtk-update-icon-cache = usr/share/icons/*/icon-theme.cache
+ibus = etc/dconf/db/ibus
+kmod = etc/modprobe.d/*
 linux = boot/linux.efi
 linux = boot/linux-fallback.efi
 linux = boot/vmlinuz-linux
 linux = etc/mkinitcpio.d/linux.preset
 linux = usr/lib/modules/*arch*/modules.*
+linux-lts = boot/linux-lts.efi
+linux-lts = boot/linux-lts-fallback.efi
+linux-lts = boot/vmlinuz-linux-lts
+linux-lts = etc/mkinitcpio.d/linux-lts.preset
+linux-lts = usr/lib/modules/*lts*/modules.*
 linux-zen = boot/linux-zen.efi
-linux-zen = boot/linux-zen-fallback.efi 
+linux-zen = boot/linux-zen-fallback.efi
 linux-zen = boot/vmlinuz-linux-zen
 linux-zen = etc/mkinitcpio.d/linux-zen.preset
 linux-zen = usr/lib/modules/*zen*/modules.*
-networkmanager = etc/NetworkManager/system-connections/*
+mkinitcpio = etc/crypttab.initramfs
+mkinitcpio = etc/initcpio/post/*
+mkinitcpio = etc/kernel/cmdline*
+mlocate = var/lib/mlocate
 networkmanager = etc/NetworkManager/dispatcher.d/*
+networkmanager = etc/NetworkManager/system-connections/*
 networkmanager = var/lib/NetworkManager/*
-bluez = var/lib/bluetooth/*
-ca-certificates = etc/ca-certificates/extracted/*
-fontconfig = etc/fonts/conf.d/*
+nvme-cli = etc/nvme/*
+openssh = etc/ssh/ssh_host_*_key
+openssh = etc/ssh/ssh_host_*_key.pub
+openvpn = etc/openvpn
+pacman = etc/pacman.d/gnupg
+pacman = etc/pacman.d/hooks
+pacman = var/lib/pacman/*
+pacutils = etc/pacreport.conf
+pam-u2f = etc/u2f_mappings
+plocate = var/lib/plocate/plocate.db
+plymouth = usr/share/plymouth/themes/*/
+plymouth = var/lib/plymouth
+polkit = etc/polkit-1/rules.d/*
+python = **/__pycache__
+samba = etc/samba
+sbsigntools = etc/secureboot
+shadow = etc/group-
+shadow = etc/gshadow-
+shadow = etc/passwd-
+shadow = etc/shadow-
 sudo = etc/sudoers.d/*
-systemd = etc/systemd/*.conf.d/
+systemd = etc/binfmt.d/*
+systemd = etc/hostname
+systemd = etc/locale.conf
+systemd = etc/machine-id
+systemd = etc/os-release
+systemd = etc/sysctl.d/*
+systemd = etc/systemd/*.conf.d
 systemd = etc/systemd/system/*
-zram-generator = /etc/systemd/zram-generator.conf
+systemd = etc/systemd/user/*
+systemd = etc/tmpfiles.d/*
+systemd = etc/vconsole.conf
+systemd = usr/lib/udev/hwdb.bin
+systemd = var/lib/machines
+systemd = var/lib/portables
+systemd = var/lib/systemd/*
+texlive-bin = etc/texmf
+texlive-bin = usr/share/texmf-dist
+texlive-bin = var/lib/texmf
+tpm2-tss = var/lib/tpm2-tss
+tzdata = etc/localtime
+upower = var/lib/upower/history-*
+util-linux = etc/adjtime
+zram-generator = etc/systemd/zram-generator.conf
