--- a/Pacreport/pacreport.conf
+++ b/Pacreport/pacreport.conf
@@ -3,6 +3,7 @@ IgnoreUnowned = efi
 IgnoreUnowned = swap
 
 [PkgIgnoreUnowned]
+audit = etc/audit/audit.rules
 bluez = var/lib/bluetooth/*
 ca-certificates = etc/ca-certificates/extracted/*
 cups = etc/cups/*
@@ -20,26 +21,31 @@ geoclue = var/lib/geoclue
 glib2 = usr/lib/gio/modules/giomodule.cache
 glib2 = usr/share/glib-2.0/schemas/gschemas.compiled
 glibc = etc/ld.so.cache
+gtk2 = usr/lib/gtk-2.0/2.*/immodules.cache
 gtk3 = usr/lib/gtk-3.0/3.*/immodules.cache
-gtk3 = usr/lib/gtk-4.0/4.*/*/giomodule.cache
+gtk4 = usr/lib/gtk-4.0/4.*/*/giomodule.cache
 gtk-update-icon-cache = usr/share/icons/*/icon-theme.cache
 ibus = etc/dconf/db/ibus
 kmod = etc/modprobe.d/*
+lib32-gdk-pixbuf2 = usr/lib32/gdk-pixbuf-2.0/2.*/loaders.cache
+lib32-gtk2 = usr/lib32/gtk-2.0/2.*/immodules.cache
+lib32-gtk3 = usr/lib32/gtk-3.0/3.*/immodules.cache
 linux = boot/linux.efi
 linux = boot/linux-fallback.efi
 linux = boot/vmlinuz-linux
 linux = etc/mkinitcpio.d/linux.preset
-linux = usr/lib/modules/*arch*/modules.*
 linux-lts = boot/linux-lts.efi
 linux-lts = boot/linux-lts-fallback.efi
 linux-lts = boot/vmlinuz-linux-lts
 linux-lts = etc/mkinitcpio.d/linux-lts.preset
 linux-lts = usr/lib/modules/*lts*/modules.*
+linux = usr/lib/modules/*arch*/modules.*
 linux-zen = boot/linux-zen.efi
 linux-zen = boot/linux-zen-fallback.efi
 linux-zen = boot/vmlinuz-linux-zen
 linux-zen = etc/mkinitcpio.d/linux-zen.preset
 linux-zen = usr/lib/modules/*zen*/modules.*
+logiops = etc/logid.cfg
 mkinitcpio = etc/crypttab.initramfs
 mkinitcpio = etc/initcpio/post/*
 mkinitcpio = etc/kernel/cmdline*
@@ -75,6 +81,8 @@ systemd = etc/machine-id
 systemd = etc/os-release
 systemd = etc/sysctl.d/*
 systemd = etc/systemd/*.conf.d
+systemd = etc/systemd/network
+systemd = etc/systemd/nspawn
 systemd = etc/systemd/system/*
 systemd = etc/systemd/user/*
 systemd = etc/tmpfiles.d/*
@@ -90,4 +98,6 @@ tpm2-tss = var/lib/tpm2-tss
 tzdata = etc/localtime
 upower = var/lib/upower/history-*
 util-linux = etc/adjtime
+xorg-server = etc/X11/xorg.conf
+xorg-server = etc/X11/xorg.conf.d/*
 zram-generator = etc/systemd/zram-generator.conf
