Yet another pacreport update

--- a/Pacreport/pacreport.conf
+++ b/Pacreport/pacreport.conf
@@ -18,6 +18,7 @@ firewalld = etc/firewalld/zones/*
 fontconfig = etc/fonts/conf.d/*
 gdk-pixbuf2 = usr/lib/gdk-pixbuf-2.0/2.*/loaders.cache
 geoclue = var/lib/geoclue
+ghc = usr/lib/ghc-*
 glib2 = usr/lib/gio/modules/giomodule.cache
 glib2 = usr/share/glib-2.0/schemas/gschemas.compiled
 glibc = etc/ld.so.cache
@@ -62,8 +63,9 @@ pacman = etc/pacman.d/hooks
 pacman = var/lib/pacman/*
 pacutils = etc/pacreport.conf
 pam-u2f = etc/u2f_mappings
+pipewire = etc/pipewire
 plocate = var/lib/plocate/plocate.db
-plymouth = usr/share/plymouth/themes/*/
+plymouth = usr/share/plymouth/themes
 plymouth = var/lib/plymouth
 polkit = etc/polkit-1/rules.d/*
 python = **/__pycache__
@@ -86,6 +88,8 @@ systemd = etc/systemd/nspawn
 systemd = etc/systemd/system/*
 systemd = etc/systemd/user/*
 systemd = etc/tmpfiles.d/*
+systemd = etc/udev/hwdb.bin
+systemd = etc/udev/hwdb.d
 systemd = etc/vconsole.conf
 systemd = usr/lib/udev/hwdb.bin
 systemd = var/lib/machines
