--- a/user/systemd/user/mako.service
+++ b/user/systemd/user/mako.service
@@ -9,6 +9,7 @@ BusName=org.freedesktop.Notifications
 ExecCondition=/bin/sh -c '[ -n "$WAYLAND_DISPLAY" ]'
 ExecStart=/usr/bin/mako
 ExecReload=/usr/bin/makoctl reload
+Slice=session.slice
 
 [Install]
 WantedBy=sway-session.target
