--- a/user/systemd/user/polkit-agent.service
+++ b/user/systemd/user/polkit-agent.service
@@ -1,11 +1,18 @@
 [Unit]
 Description=PolicyKit authentication agent
-PartOf=sway-session.target
 
 [Service]
+UMask=0077
+LockPersonality=yes
+MemoryDenyWriteExecute=yes
+NoNewPrivileges=yes
+RestrictNamespaces=yes
+SystemCallArchitectures=native
+SystemCallFilter=@system-service
+SystemCallFilter=~@privileged
+SystemCallErrorNumber=EPERM
+
+Type=simple
 ExecStart=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 Restart=on-failure
 Slice=session.slice
-
-[Install]
-WantedBy=sway-session.target
