--- a/user/systemd/user/pipewire@.service
+++ b/user/systemd/user/pipewire@.service
@@ -11,6 +11,9 @@ NoNewPrivileges=yes
 RestrictNamespaces=yes
 SystemCallArchitectures=native
 SystemCallFilter=@system-service
+SystemCallFilter=~@privileged
+SystemCallErrorNumber=EPERM
+
 Type=simple
 ExecStart=/usr/bin/pipewire -c %i.conf
 Restart=on-failure
