Update waybar config

--- a/user/waybar/config
+++ b/user/waybar/config
@@ -1,11 +1,9 @@
 {
-    "layer": "bottom", // Waybar at top layer
-    "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 27, // Waybar height (to be removed for auto height)
+    "layer": "bottom",
+    "position": "top",
+    "height": 27,
     "margin": 2,
     "spacing": 4,
-    // "width": 1500, // Waybar width
-    // Choose the order of the modules
     "modules-left": [
         "tray",
         "sway/workspaces",
@@ -22,54 +20,24 @@
         "memory",
         "clock"
     ],
+
     // Modules configuration
+    "tray": {
+        "spacing": 10
+    },
     "sway/workspaces": {
         "disable-scroll": true,
         "all-outputs": false
     },
-    "custom/pacman": {
-        "format": "{}  ",
-        "interval": 3600, // every hour
-        "exec": "checkupdates | wc -l", // # of updates
-        //"exec-if": "[ $(nmcli networking connectivity) == 'full' ]",
-        "exec-on-event": true,
-        "on-click-right": "alacritty -t Update -e yay --sudo pkexec -Syu",
-        "tooltip": false
+    "sway/mode": {
+        "format": "<span style=\"italic\">{}</span>"
     },
     "sway/window": {
         "tooltip": false,
         "icon": false
     },
-    "sway/mode": {
-        "format": "<span style=\"italic\">{}</span>"
-    },
-    "tray": {
-        // "icon-size": 16,
-        "spacing": 10
-    },
-    "clock": {
-        "format": "{:%H:%M:%S}",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%A %e. %b %Y}",
-        "interval": 1
-    },
-    "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
-    },
-    "memory": {
-        "format": "{}% "
-    },
-    "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
-        "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
-    },
+
     "pulseaudio": {
-        // "scroll-step": 1, // %, can be a float
         "format": "{volume}% {icon} {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
@@ -88,7 +56,38 @@
                 "",
                 ""
             ]
-        },
-        //"on-click": "pavucontrol"
+        }
+    },
+
+    "custom/pacman": {
+        "format": "{}  ",
+        "interval": 3600,
+        "exec": "checkupdates | wc -l",
+        "exec-on-event": true,
+        "on-click-right": "systemd-run --user -u app-update-window alacritty -t Update -e yay -Syu",
+        "tooltip": false
+    },
+    "network": {
+        "interval": 20,
+        "format-wifi": "{essid} ({signalStrength}%) ",
+        "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
+        "format-linked": "{ifname} (No IP) ",
+        "format-disconnected": "Disconnected ⚠",
+        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+    },
+    "cpu": {
+        "interval": 2,
+        "format": "{usage}% ",
+        "tooltip": false
+    },
+    "memory": {
+        "interval": 2,
+        "format": "{}% "
+    },
+    "clock": {
+        "format": "{:%H:%M:%S}",
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "format-alt": "{:%A %e. %b %Y}",
+        "interval": 1
     }
 }
