--- a/Pacman/makepkg.conf
+++ b/Pacman/makepkg.conf
@@ -11,9 +11,6 @@
 #-- Only use available CPU time: SCHED_IDLE
 chrt -iap 0 $$
 
-#-- Make a partial clone
-GITFLAGS="--filter=tree:0"
-
 #########################################################################
 # SOURCE ACQUISITION
 #########################################################################
@@ -57,13 +54,11 @@ CXXFLAGS="$CFLAGS -Wp,-D_GLIBCXX_ASSERTIONS"
 LDFLAGS="-Wl,-O1 -Wl,--sort-common -Wl,--as-needed -Wl,-z,relro -Wl,-z,now \
          -Wl,-z,pack-relative-relocs"
 LTOFLAGS="-flto=auto"
-RUSTFLAGS="-Cforce-frame-pointers=yes -C opt-level=2 -C target-cpu=native"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j8"
 #-- Debugging flags
 DEBUG_CFLAGS="-g"
 DEBUG_CXXFLAGS="$DEBUG_CFLAGS"
-DEBUG_RUSTFLAGS="-C debuginfo=2"
 
 #########################################################################
 # BUILD ENVIRONMENT
@@ -78,7 +73,7 @@ DEBUG_RUSTFLAGS="-C debuginfo=2"
 #-- check:    Run the check() function if present in the PKGBUILD
 #-- sign:     Generate PGP signature file
 #
-BUILDENV=(!distcc color ccache check !sign)
+BUILDENV=(!distcc color !ccache check !sign)
 #
 #-- If using DistCC, your MAKEFLAGS will also need modification. In addition,
 #-- specify a space-delimited list of hosts running in the DistCC cluster.
@@ -106,7 +101,7 @@ BUILDENV=(!distcc color ccache check !sign)
 #-- lto:        Add compile flags for building with link time optimization
 #-- autodeps:   Automatically add depends/provides
 #
-OPTIONS=(strip docs !libtool !staticlibs emptydirs zipman purge debug lto !autodeps)
+OPTIONS=(strip docs !libtool !staticlibs emptydirs zipman purge debug lto)
 
 #-- File integrity checks to use. Valid: md5, sha1, sha224, sha256, sha384, sha512, b2
 INTEGRITY_CHECK=(sha256)
@@ -153,7 +148,7 @@ LIB_DIRS=('lib:usr/lib' 'lib32:usr/lib32')
 COMPRESSGZ=(gzip -c -f -n)
 COMPRESSBZ2=(bzip2 -c -f)
 COMPRESSXZ=(xz -c -z -)
-COMPRESSZST=(zstd -c -T0 --ultra -20 -)
+COMPRESSZST=(zstd -c -T0 -)
 COMPRESSLRZ=(lrzip -q)
 COMPRESSLZO=(lzop -q)
 COMPRESSZ=(compress -c -f)
