--- a/Pacman/makepkg.conf
+++ b/Pacman/makepkg.conf
@@ -57,7 +57,7 @@ LTOFLAGS="-flto=auto"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j8"
 #-- Debugging flags
-DEBUG_CFLAGS="-g"
+DEBUG_CFLAGS="-g -O0"
 DEBUG_CXXFLAGS="$DEBUG_CFLAGS"
 
 #########################################################################
@@ -101,7 +101,7 @@ BUILDENV=(!distcc color !ccache check !sign)
 #-- lto:        Add compile flags for building with link time optimization
 #-- autodeps:   Automatically add depends/provides
 #
-OPTIONS=(strip docs !libtool !staticlibs emptydirs zipman purge debug lto)
+OPTIONS=(strip docs !libtool !staticlibs emptydirs zipman purge !debug lto)
 
 #-- File integrity checks to use. Valid: md5, sha1, sha224, sha256, sha384, sha512, b2
 INTEGRITY_CHECK=(sha256)
