--- a/user/pipewire/rtp-sink.conf
+++ b/user/pipewire/rtp-sink.conf
@@ -17,7 +17,6 @@ context.modules = [
     { name = libpipewire-module-rt
         args = {
             nice.level   = -11
-            #rt.prio      = 88
             rt.prio      = 65
             #rt.time.soft = -1
             #rt.time.hard = -1
@@ -36,12 +35,13 @@ context.modules = [
             sap.ip = "224.0.0.56"
             sap.port = 9875
             stream.rules = [
-                {
-                    matches = [
-                        { sess.sap.announce = true }
+                {   matches = [
+                        {
+                            sess.sap.announce = true
+                        }
                     ]
                     actions = {
-                        announce-stream {}
+                        announce-stream = { }
                     }
                 }
             ]
@@ -50,10 +50,18 @@ context.modules = [
     { name = libpipewire-module-rtp-sink
         args = {
             destination.ip = "224.0.0.56"
+            destination.port = 9875
+            net.mtu = 1500
+            sess.min-ptime = 2
+            sess.max-ptime = 10
+            sess.latency.msec = 5
+            sess.media = "opus"
             stream.props = {
-                media.class = "Audio/Sink"
                 node.name = "rtp-mcast-sink"
                 node.description = "RTP Sink"
+                media.type = "Audio"
+                media.class = "Audio/Sink"
+                node.latency = 128/48000
                 sess.sap.announce = true
             }
         }
