--- a/user/pipewire/rtp-sources.conf
+++ b/user/pipewire/rtp-sources.conf
@@ -17,7 +17,6 @@ context.modules = [
     { name = libpipewire-module-rt
         args = {
             nice.level   = -11
-            #rt.prio      = 88
             rt.prio      = 65
             #rt.time.soft = -1
             #rt.time.hard = -1
@@ -36,12 +35,16 @@ context.modules = [
             sap.ip = "224.0.0.56"
             sap.port = 9875
             stream.rules = [
-                {
-                    matches = [
-                        { rtp.session = "~.*" }
+                {   matches = [
+                        {
+                            rtp.session = "~.*"
+                        }
                     ]
                     actions = {
-                        create-stream {}
+                        create-stream = {
+                            sess.latency.msec = 5
+                            media.class = "Audio/Source"
+                        }
                     }
                 }
             ]
