--- a/user/pipewire/rtp-sources-sink.conf
+++ b/user/pipewire/rtp-sources-sink.conf
@@ -17,7 +17,6 @@ context.modules = [
     { name = libpipewire-module-rt
         args = {
             nice.level   = -11
-            #rt.prio      = 88
             rt.prio      = 65
             #rt.time.soft = -1
             #rt.time.hard = -1
@@ -35,15 +34,46 @@ context.modules = [
         args = {
             sap.ip = "224.0.0.56"
             sap.port = 9875
+            stream.rules = [
+                {   matches = [
+                        {
+                            sess.sap.announce = true
+                        }
+                    ]
+                    actions = {
+                        announce-stream = { }
+                    }
+                }
+                {   matches = [
+                        {
+                            rtp.session = "~.*"
+                        }
+                    ]
+                    actions = {
+                        create-stream = {
+                            sess.latency.msec = 5
+                            media.class = "Audio/Source"
+                        }
+                    }
+                }
+            ]
         }
     }
     { name = libpipewire-module-rtp-sink
         args = {
             destination.ip = "224.0.0.56"
+            destination.port = 9875
+            net.mtu = 1500
+            sess.min-ptime = 2
+            sess.max-ptime = 10
+            sess.latency.msec = 5
+            sess.media = "opus"
             stream.props = {
-                media.class = "Audio/Sink"
                 node.name = "rtp-mcast-sink"
                 node.description = "RTP Sink"
+                media.type = "Audio"
+                media.class = "Audio/Sink"
+                node.latency = 128/48000
                 sess.sap.announce = true
             }
         }
