--- a/user/systemd/user/maestral-gui@.service
+++ b/user/systemd/user/maestral-gui@.service
@@ -16,7 +16,7 @@ SystemCallFilter=@system-service
 SystemCallFilter=~@privileged
 SystemCallErrorNumber=EPERM
 
-Type = simple
+Type = exec
 ExecStart = /usr/bin/maestral gui -c %i
 Slice = session.slice
 
