--- a/user/systemd/user/pipewire@.service
+++ b/user/systemd/user/pipewire@.service
@@ -14,7 +14,7 @@ SystemCallFilter=@system-service
 SystemCallFilter=~@privileged
 SystemCallErrorNumber=EPERM
 
-Type=simple
+Type=exec
 ExecStart=/usr/bin/pipewire -c %i.conf
 Restart=on-failure
 Slice=session.slice
