--- a/user/systemd/user/waybar.service
+++ b/user/systemd/user/waybar.service
@@ -13,8 +13,7 @@ SystemCallFilter=@system-service
 SystemCallFilter=~@privileged
 SystemCallErrorNumber=EPERM
 
-Type=dbus
-BusName=org.kde.StatusNotifierWatcher
+Type=exec
 ExecStart=/usr/bin/waybar
 ExecReload=kill -SIGUSR2 $MAINPID
 Restart=on-failure
