--- a/user/swayidle/config
+++ b/user/swayidle/config
@@ -1,3 +1,3 @@
-lock 'swaylock -f -c 000000'
-unlock 'killall -SIGUSR1 swaylock'
-before-sleep 'swaylock -f -c 000000'
+lock 'systemd-run --user -u app-swaylock -p Type=exec swaylock'
+unlock 'systemctl --user kill app-swaylock --signal=SIGUSR1'
+before-sleep 'systemd-run --user -u app-swaylock -p Type=exec swaylock'
